Fix txtHistory overlap

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button:active{
 
 .divResult h2{
     margin: 0;
+    
     text-align: right;
 
     outline: 1 solid red;
@@ -77,7 +78,8 @@ button:active{
 }
 
 .txtResult{
-    font-size: 62px;
+    margin-top: 1px;
+    font-size: 68px;
     font-weight: 900;
     text-align: right;
     background-color: #22252D;
@@ -93,6 +95,9 @@ button:active{
 .txtHistory{
     font-size: 20px;
     font-weight: 400;
+    min-height: 32px;
+    margin-bottom: 1px;
+    color: #bebebe;
 }
 
 .divButtons{
